new file:   Imagenes de ovas y peliculas/Anime1.jpg 	new file:   Imagenes de ovas y peliculas/Anime2.jpg 	new file:   Imagenes de ovas y peliculas/Anime3.jpg 	new file:   Imagenes de ovas y peliculas/Anime4.jpg 	new file:   Imagenes de ovas y peliculas/Anime5.jpg 	modified:   animes_emision.html 	modified:   index.html 	modified:   ovas_peliculas.html 	modified:   style.css 	modified:   style_emision.css

--- a/ovas_peliculas.html
+++ b/ovas_peliculas.html
@@ -3,14 +3,176 @@
     <head>
         <meta charset="UTF-8">
         <title>Anime</title>
-        <link rel="stylesheet" href="style_ovas_peliculas.css">
+        <link rel="stylesheet" href="style_emision.css">
     </head>
     <body>
         <header>
+             <div class="titulo">
+                <h1>Ovas y Peliculas</h1>
+            </div>
             <div class="logo-anime">
                 <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes/Logo-Anime.png" alt="Logo de Anime">
             </div>
+           <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="anime.html">Anime</a></li>
+                    <li><a href="animes_emision.html">Anime en emisión</a></li>
+                    <li><a href="lista.html">Lista de anime para ver</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
         </header>
+
+        <section>
+            <div class="animes">
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime1.jpg" alt="Anime 1">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime2.jpg" alt="Anime 2">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime3.jpg" alt="Anime 3">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime4.jpg" alt="Anime 4">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime5.jpg" alt="Anime 5">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime6.jpg" alt="Anime 6">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime7.jpg" alt="Anime 7">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime8.jpg" alt="Anime 8">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime9.jpg" alt="Anime 9">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime10.jpg" alt="Anime 10">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime11.jpg" alt="Anime 11">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime12.jpg" alt="Anime 12">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime13.jpg" alt="Anime 13">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime14.jpg" alt="Anime 14">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime15.jpg" alt="Anime 15">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime16.jpg" alt="Anime 16">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime17.jpg" alt="Anime 17">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime18.jpg" alt="Anime 18">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime19.jpg" alt="Anime 19">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime20.jpg" alt="Anime 20">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime21.jpg" alt="Anime 21">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime22.jpg" alt="Anime 22">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime23.jpg" alt="Anime 23">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime24.jpg" alt="Anime 24">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime25.jpg" alt="Anime 25">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime26.jpg" alt="Anime 26">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime27.jpg" alt="Anime 27">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime28.jpg" alt="Anime 28">
+                    <p></p>
+                </div>
+                <div class="anime">
+                    <h3></h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime29.jpg" alt="Anime 29">
+                    <p></p>
+                </div>
+            </div>
+        </section>
 
         <footer>
             <p>© 2024 Anime. Todos los derechos reservados.</p>
