modified:   anime.html 	modified:   animes_emision.html 	modified:   contacto.html 	modified:   lista.html 	modified:   ovas_peliculas.html 	modified:   style_anime.css 	modified:   style_contacto.css 	modified:   style_lista.css 	modified:   style_ovas_peliculas.css

--- a/animes_emision.html
+++ b/animes_emision.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Anime</title>
+        <title>Anime en emision</title>
         <link rel="stylesheet" href="style_emision.css">
     </head>
     <body>
