--- a/ovas_peliculas.html
+++ b/ovas_peliculas.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Anime</title>
+        <title>Ovas y Peliculas</title>
         <link rel="stylesheet" href="style_emision.css">
     </head>
     <body>
@@ -27,7 +27,7 @@
         <section>
             <div class="animes">
                 <div class="anime">
-                    <h3></h3>
+                    <h3>Akagami no Shirayuki-hime</h3>
                     <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20ovas%20y%20peliculas/Anime1.jpg" alt="Anime 1">
                     <p></p>
                 </div>
