--- a/anime.html
+++ b/anime.html
@@ -10,6 +10,15 @@
             <div class="logo-anime">
                 <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes/Logo-Anime.png" alt="Logo de Anime">
             </div>
+           <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="animes_emision.html">Animes en Emision</a></li>
+                    <li><a href="ovas_peliculas.html">Ovas y peliculas</a></li>
+                    <li><a href="lista.html">Lista de anime para ver</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
         </header>
 
         <footer>
