new file:   Imagenes de animes en emision/Anime7.jpg 	modified:   animes_emision.html

--- a/animes_emision.html
+++ b/animes_emision.html
@@ -32,59 +32,34 @@
                     <p>Cuarta temporada de Ao no Exorcist:  El mundo esta unido por 2 dimensiones,el mundo de los seres vivos y de los demonios llamada también Geneha ninguno de los 2 mundos puede tener contacto alguno,pero estos demonios pueden ir al mundo de los seres vivos y poseer y manipular a cualquier humano,vease el caso de Satanás el dios oscuro del inframundo,Satanás quiere entrar al mundo de los seres vivos,pero no hay cuerpo humano que lo pueda resistir ,visto esto engendro a Rin Okumura hijo suyo y de una humana,pero resulta que Rin okumura se da cuenta que es el hijo de Satanas y lo rechaza como padre,y el no esta dispuesto a seguir sus planes,después de un intento fallido de satanás de llevar y matar a su protector Fujimoto, el Hijo de satanás (Rin Okumura) decide ser un Exorcista y así comienza la historia en Ao no exorcist.....</p>
                 </div>
                 <div class="anime">
-                    <h3>Baraou no Souretsu</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime2.jpg" alt="Anime 2">
-                    <p>La corona de Inglaterra ha sido muy disputada a lo largo de la historia, y en la Edad Media, una serie de grandes guerras civiles se conoce como la “Guerra de las Rosas”. Reclamando el derecho al trono, el duque de York busca derrotar al rey Enrique VI y a su heredero para convertirse él mismo en rey. En un día oscuro lleno de malos augurios, el duque gana un hijo: Richard Plantagenet, el tercero de su nombre. Ni hombre ni mujer, puesto que tiene ambos sexos. Richard III es inmediatamente rechazado por su propia madre, por lo que el odio se convierte en el pan de cada día en su infancia, lo que le lleva a odiar su propio cuerpo y a ser llamado un “demonio” por los demás. Richard crece preocupado debido a que tiene visiones de la antigua enemiga de Inglaterra, Juana de Arco, quien se burla diciéndole que traerá la ruina a todos aquellos que alguna vez conozca. Desde entonces, Richard cree que puede conseguir evitar su destino si ayuda a su padre a convertirse en rey. Sin embargo, maldecido por las bajísimas expectativas por parte de su madre y de Juana, ¿las acciones de Richard terminarán por hundir a su familia?</p>
-                </div>
-                <div class="anime">
                     <h3>Fairy Tail: 100-nen Quest</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime3.jpg" alt="Anime 3">
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime2.jpg" alt="Anime 3">
                     <p>Fairy Tail es un gremio de magos reconocidos como el más poderoso de todo el Reino de Fiore. Su grupo más fuerte, compuesto por Natsu, Lucy, Happy, Grey, Erza, Wendy y Carla, se prepara para afrontar la legendaria "Misión de los 100 años", una misión incluso más difícil que las misiones de Clase S. El equipo de Natsu logra el permiso para afrontar esta misión luego de superar sus batallas a vida o muerte contra el mago negro Zeref y el dragón negro Acnologia. Su destino será el primer gremio de magos de la historia, Magia Dragon, en el lejano continente del norte, Guiltina. Sin embargo, aunque Magia Dragon se fundó hace cientos de años, nadie logró jamás completar esta misión tan extremadamente difícil. Su primera visita a Guiltina hace que Natsu y su equipo descubran nuevas ciudades, misteriosos nuevos dioses y temibles enemigos nuevos...</p>
                 </div>
                 <div class="anime">
                     <h3>Goukon ni Ittara Onna ga Inakatta Hanashi</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime4.jpg" alt="Anime 4">
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime3.jpg" alt="Anime 4">
                     <p>Tokiwa, un estudiante universitario, es invitado a una fiesta por su compañera de clase Suo, y puede traer a otros dos amigos, ya que Suo estará acompañada por dos de sus compañeras de trabajo. Asi que trae a sus amigos Asagi y Hagi para que conozcan a Suo y a las otras dos chicas. Pero cuando llegan al punto de encuentro, se encuentran confundidos y nerviosos al ser recibidos no por tres lindas mujeres, sino por tres mujeres vestidas como hombres deslumbrantemente guapos.</p>
                 </div>
                 <div class="anime">
                     <h3>Kekkon suru tte, Hontou desu ka</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime5.jpg" alt="Anime 5">
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime4.jpg" alt="Anime 5">
                     <p>Takuya y Rika trabajan en la misma agencia de viajes de Tokio y ambos son felizmente introvertidos y solteros, pero su empresa va a abrir una nueva sucursal en Alaska el próximo año. Desesperados por evitar la mudanza, y a pesar de que apenas han hablado antes, deciden fingir un compromiso. ¿Podrán estos tranquilos compañeros de trabajo convertirse en una pareja convincente?</p>
                 </div>
                 <div class="anime">
-                    <h3>Koi wa Sekai Seifuku no Ato de</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime6.jpg" alt="Anime 6">
-                    <p>A los ojos del público, Fudou Aikawa y Desumi Magahara son enemigos jurados que no tienen nada en común. Fudou, también conocido como “Gelato Rojo”, es el líder del escuadrón de héroes “Gelato 5”, cuya misión es lograr la paz mundial. Por otro lado, Desumi es la líder de los súbditos de “Gecko”, una organización de villanos que busca la dominación del mundo. Sin embargo, a pesar de estas diferencias, su relación no es lo que parece. Cuando no están haciendo un espectáculo de estar en la garganta del otro, Desumi y Fudou siguen persiguiendo un amor prohibido. Saliendo en citas, horneando dulces el uno para el otro, y reuniéndose tan a menudo como pueden a pesar de sus agitados horarios, los dos inexpertos tortolitos preparan el camino para su propia y única relación. A pesar de que sus vidas públicas son mundos aparte, Fudou y Desumi no se detendrán ante nada para que su romance aparentemente imposible funcione.</p>
-                </div>
-                <div class="anime">
-                    <h3>Maou Evelogia ni Mi wo Sasageyo</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime7.jpg" alt="Anime 7">
-                    <p>La historia comienza cuando Toshiaki Gozu es asesinado en una pelea y resucita como un personaje secundario dentro de un videojuego que el jugaba cuando estaba vivo, Gozu se encontró con el Rey Demonio Evelogia, a quien admira mucho y le empieza a decir cosas como “Estoy enamorado de ti”, “Me gustas mucho”, comenzando esta nueva vida.</p>
-                </div>
-                <div class="anime">
-                    <h3>Mo wang zu shi</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime8.jpg" alt="Anime 8">
-                    <p>El estado de inmortalidad que todos los cultivadores se esfuerzan por lograr. Sin embargo, hay una energía oscura que yace debajo: el prohibido Mo Dao, o camino demoníaco. A través de una desafortunada serie de tragedias, este es el camino que experimenta el cultivador Wei Wu Xian durante sus enseñanzas. Su ascenso en el poder va acompañado de caos y destrucción, pero su reino de terror llega a un abrupto final cuando los clanes de cultivo lo dominan y es asesinado por su aliado más cercano. Trece años después, Wei Wu Xian reencarna en el cuerpo de un lunático y se reúne con Lan Wang Ji, un antiguo compañero de clase suyo. Esto marca el comienzo de un misterio sobrenatural que afecta a los clanes y amenaza con interrumpir su vida cotidiana.</p>
-                </div>
-                <div class="anime">
-                    <h3>Overlord IV</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime9.jpg" alt="Anime 9">
-                    <p>Cuarta temporada de Overlord: La historia da comienzo cuando Yggdrasil, un popular juego online, es cerrado un día sin previo aviso. Sin embargo, el protagonista, Momonga, decide no salir del juego. Momonga así se transforma y se convierte en “el mago más poderoso”. El mundo sigue cambiando con él dentro, y los NPCs comienzan a sentir emociones. Sin familia, amigos ni lugar en la sociedad, Momonga tendrá que luchar por adaptarse al nuevo mundo en el que se ha convertido el juego.</p>
-                </div>
-                <div class="anime">
                     <h3>Raise wa Tanin ga Ii</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime10.jpg" alt="Anime 10">
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime5.jpg" alt="Anime 10">
                     <p>Renji Somei es el abuelo de Yoshino Somei y líder del Grupo Somei, el mayor grupo yakuza de Kansai. Cuando el hombre prepara todo para casarla con Kirishima Miyama, Yoshino tiene que trasladarse a la mansión de los Miyama, el mayor grupo de yakuza de la región de Kanto. Kirishima da la bienvenida a Yoshino, pues es un joven agradable, guapo y amable del que nadie sospecharía jamás que es de una familia de yakuza. Esto tranquiliza a Yoshino, quien estaba nerviosa por tener que mudarse a un lugar desconocido. Es entonces cuando cierto acontecimiento hace que Yoshino presencie cómo es realmente Kirishima.</p>
                 </div>
                 <div class="anime">
-                    <h3>The Night Beyond the Tricornered Window</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime11.jpg" alt="Anime 11">
-                    <p>Mikado es un empleado de libreríaque siempre ha tenido tendencia a ver cosas espeluznantes. Siempre ha vivido su vida fingiendo que no veía esas cosas, pero un día tiene un fatídico encuentro con un exorcista llamado Hiyakawa. Mikado acaba viéndose obligado a ayudar en las tareas de exorcismo y tiene que lidiar con el embarazoso hecho de que exorcizar estas cosas con Hiyakawa le encanta. Mientras se ven arrastrados a lidiar a diario, se encuentran con un caso de asesinato a sangre fría. Disfruta de un nuevo tipo de misterio de terror creado por personas totalmente opuestas.</p>
+                    <h3>Tsuma, Shougakusei ni Naru</h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime6.jpg" alt="Anime 12">
+                    <p>Keisuke Niijima vive afligido desde que su mujer, Takae, falleció diez años atrás. Pero cuando una niña le visita diciendo ser Takae reencarnada, Keisuke y su hija Mai viven un reencuentro milagroso. A medida que la niña revela detalles íntimos que solo ellos podrían conocer, la familia Niijima comienza a sanar lentamente, redescubriendo el amor y la calidez de la forma más inesperada.</p>
                 </div>
                 <div class="anime">
-                    <h3>Tsuma, Shougakusei ni Naru</h3>
-                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime12.jpg" alt="Anime 12">
-                    <p>Keisuke Niijima vive afligido desde que su mujer, Takae, falleció diez años atrás. Pero cuando una niña le visita diciendo ser Takae reencarnada, Keisuke y su hija Mai viven un reencuentro milagroso. A medida que la niña revela detalles íntimos que solo ellos podrían conocer, la familia Niijima comienza a sanar lentamente, redescubriendo el amor y la calidez de la forma más inesperada.</p>
+                    <h3>Youkai Gakkou no Sensei Hajimemashita</h3>
+                    <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime7.jpg" alt="Anime 13">
+                    <p>Haruaki Abe está feliz de poder cumplir por fin su sueño de convertirse en profesor. Esa felicidad dura poco cuando llega a la Academia Hyakki y descubre que la escuela está llena de monstruos. ¿Podrá Abe superar su cobardía y controlar a sus alumnos sobrenaturales? Únete al tímido profesor y a su estrafalaria clase en una historia de travesuras macabras y educación paranormal.</p>
                 </div>
             </div>
         </section>
