--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="anime.html">Anime</a></li>
-                    <li><a href="animes_emision.html">Animes en Emision</a></li>
+                    <li><a href="emision.html">Animes en Emision</a></li>
                     <li><a href="ovas_peliculas.html">Ovas y peliculas</a></li>
                     <li><a href="lista.html">Lista de anime para ver</a></li>
                 </ul>
