--- a/emision.html
+++ b/emision.html
@@ -29,36 +29,43 @@
                 <div class="anime">
                     <h3>Ao no Exorcist: Yuki no Hate-hen</h3>
                     <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime1.jpg" alt="Anime 1">
+                    <h4>Categoria: Acción, Escolares, Shounen, Sobrenatural</h4>
                     <p>Cuarta temporada de Ao no Exorcist:  El mundo esta unido por 2 dimensiones,el mundo de los seres vivos y de los demonios llamada también Geneha ninguno de los 2 mundos puede tener contacto alguno,pero estos demonios pueden ir al mundo de los seres vivos y poseer y manipular a cualquier humano,vease el caso de Satanás el dios oscuro del inframundo,Satanás quiere entrar al mundo de los seres vivos,pero no hay cuerpo humano que lo pueda resistir ,visto esto engendro a Rin Okumura hijo suyo y de una humana,pero resulta que Rin okumura se da cuenta que es el hijo de Satanas y lo rechaza como padre,y el no esta dispuesto a seguir sus planes,después de un intento fallido de satanás de llevar y matar a su protector Fujimoto, el Hijo de satanás (Rin Okumura) decide ser un Exorcista y así comienza la historia en Ao no exorcist.....</p>
                 </div>
                 <div class="anime">
                     <h3>Fairy Tail: 100-nen Quest</h3>
                     <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime2.jpg" alt="Anime 3">
+                    <h4>Categoria: Acción, Aventuras, Fantasía, Shounen</h4>
                     <p>Fairy Tail es un gremio de magos reconocidos como el más poderoso de todo el Reino de Fiore. Su grupo más fuerte, compuesto por Natsu, Lucy, Happy, Grey, Erza, Wendy y Carla, se prepara para afrontar la legendaria "Misión de los 100 años", una misión incluso más difícil que las misiones de Clase S. El equipo de Natsu logra el permiso para afrontar esta misión luego de superar sus batallas a vida o muerte contra el mago negro Zeref y el dragón negro Acnologia. Su destino será el primer gremio de magos de la historia, Magia Dragon, en el lejano continente del norte, Guiltina. Sin embargo, aunque Magia Dragon se fundó hace cientos de años, nadie logró jamás completar esta misión tan extremadamente difícil. Su primera visita a Guiltina hace que Natsu y su equipo descubran nuevas ciudades, misteriosos nuevos dioses y temibles enemigos nuevos...</p>
                 </div>
                 <div class="anime">
                     <h3>Goukon ni Ittara Onna ga Inakatta Hanashi</h3>
                     <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime3.jpg" alt="Anime 4">
+                    <h4>Categoria: Comedia, Romance</h4>
                     <p>Tokiwa, un estudiante universitario, es invitado a una fiesta por su compañera de clase Suo, y puede traer a otros dos amigos, ya que Suo estará acompañada por dos de sus compañeras de trabajo. Asi que trae a sus amigos Asagi y Hagi para que conozcan a Suo y a las otras dos chicas. Pero cuando llegan al punto de encuentro, se encuentran confundidos y nerviosos al ser recibidos no por tres lindas mujeres, sino por tres mujeres vestidas como hombres deslumbrantemente guapos.</p>
                 </div>
                 <div class="anime">
                     <h3>Kekkon suru tte, Hontou desu ka</h3>
                     <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime4.jpg" alt="Anime 5">
+                    <h4>Categoria: Seinen</h4>
                     <p>Takuya y Rika trabajan en la misma agencia de viajes de Tokio y ambos son felizmente introvertidos y solteros, pero su empresa va a abrir una nueva sucursal en Alaska el próximo año. Desesperados por evitar la mudanza, y a pesar de que apenas han hablado antes, deciden fingir un compromiso. ¿Podrán estos tranquilos compañeros de trabajo convertirse en una pareja convincente?</p>
                 </div>
                 <div class="anime">
                     <h3>Raise wa Tanin ga Ii</h3>
                     <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime5.jpg" alt="Anime 10">
+                    <h4>Categoria: Romance, Seinen</h4>
                     <p>Renji Somei es el abuelo de Yoshino Somei y líder del Grupo Somei, el mayor grupo yakuza de Kansai. Cuando el hombre prepara todo para casarla con Kirishima Miyama, Yoshino tiene que trasladarse a la mansión de los Miyama, el mayor grupo de yakuza de la región de Kanto. Kirishima da la bienvenida a Yoshino, pues es un joven agradable, guapo y amable del que nadie sospecharía jamás que es de una familia de yakuza. Esto tranquiliza a Yoshino, quien estaba nerviosa por tener que mudarse a un lugar desconocido. Es entonces cuando cierto acontecimiento hace que Yoshino presencie cómo es realmente Kirishima.</p>
                 </div>
                 <div class="anime">
                     <h3>Tsuma, Shougakusei ni Naru</h3>
                     <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime6.jpg" alt="Anime 12">
+                    <h4>Categoria: Comedia, Romance, Seinen</h4>
                     <p>Keisuke Niijima vive afligido desde que su mujer, Takae, falleció diez años atrás. Pero cuando una niña le visita diciendo ser Takae reencarnada, Keisuke y su hija Mai viven un reencuentro milagroso. A medida que la niña revela detalles íntimos que solo ellos podrían conocer, la familia Niijima comienza a sanar lentamente, redescubriendo el amor y la calidez de la forma más inesperada.</p>
                 </div>
                 <div class="anime">
                     <h3>Youkai Gakkou no Sensei Hajimemashita</h3>
                     <img src="https://raw.githubusercontent.com/Trishan24/Pagina-Anime/refs/heads/main/Imagenes%20de%20animes%20en%20emision/Anime7.jpg" alt="Anime 13">
+                    <h4>Categoria: Comedia, Escolares, Shounen</h4>
                     <p>Haruaki Abe está feliz de poder cumplir por fin su sueño de convertirse en profesor. Esa felicidad dura poco cuando llega a la Academia Hyakki y descubre que la escuela está llena de monstruos. ¿Podrá Abe superar su cobardía y controlar a sus alumnos sobrenaturales? Únete al tímido profesor y a su estrafalaria clase en una historia de travesuras macabras y educación paranormal.</p>
                 </div>
             </div>
